- Fixed: SphereShapeBuilder poles are now merged which removes lighting artifacts, see #6068 for more information.
- API Change: Matrix3#setToRotation(Vector3, float float) now rotates counter-clockwise about the axis provided. This also changes Matrix3:setToRotation(Vector3, float) and the 3d particles will rotate counter-clockwise as well. 

[1.9.10]
- API Addition: Allow target display for maximization LWJGL3 backend
- API Addition: Accelerometer support on GWT
- API Change: Set default behaviour of iOS audio to allow use of iPod
- API Change: IOSDevice is no longer an enum to allow users to add their own new devices when LibGDX is not up to date
- API Addition: Add statusBarVisible configuration to IOSApplicationConfiguration
- Update GWT Backend to GWT 2.8.2
- Update Android backend to build against API 28 (Android 9.0)
- API Addition: Input.isButtonJustPressed
- Update to LWJGL 2 backend to 2.9.3
- Update to MobiVM 2.3.6 release
- Update to LWJGL 3.2.1
- API Addition: Input allows getting the maximum number of pointers supported by the backend
- API Addition: Configuration option added to allow setting a max number of threads to use for net requests
- API Change: NetJavaImpl now uses a cached thread pool to allow concurrent requests (by default, the thread pool is unbounded - use maxNetThreads in backend configurations to set a limit - set to 1 for previous behavior)
- API Addition: New MathUtils norm and map methods
- API Change: Pixmap blending was incorrect. Generated fonts may change for the better, but may require adjusting font settings.
- API Change: Particle effects obtained from a ParticleEffectPool are now automatically started
- Removed OSX 32-bit support
- API Change: By default LWJGL2 backend no longer does pause/resume when becoming background/foreground window. New app config setting was added to enable the old behavior.